Improved readability, added data fetchers for graphQL